--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-    "name": "nodejs-api-tdd",
-    "version": "1.0.0",
-    "private": true,
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon",
-        "test": ""
-    },
-    "dependencies": {
-        "body-parser": "^1.17.2",
-        "express": "^4.15.3",
-        "mongoose": "^4.11.4"
-    },
-    "devDependencies": {
-        "mocha": "3.4.2"
-    },
-    "description": "Node.js api tdd project",
-    "author": "benjamin",
-    "license": "ISC"
+  "name": "nodejs-api-tdd",
+  "version": "1.0.0",
+  "private": true,
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon",
+    "test": "mocha"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "mongoose": "^4.11.4"
+  },
+  "devDependencies": {
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2",
+    "sinon": "^2.4.1",
+    "sinon-mongoose": "^2.0.2"
+  },
+  "description": "Node.js api tdd project",
+  "author": "benjamin",
+  "license": "ISC"
 }
